rename to fill-patterns (plural) while we are at it